--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,6 +7,8 @@ settings:
     host: 0.0.0.0
     # 服务名称
     name: admin-api
+    # 版本
+    version: 2.0.0
     # 端口号
     port: 8000 # 服务端口号
     readtimeout: 1
