--- a/static/template/router.go.template
+++ b/static/template/router.go.template
@@ -2,7 +2,6 @@ package router
 
 import (
 	"github.com/gin-gonic/gin"
-	log "go-admin/common/core/logger"
 	"go-admin/common/core"
 	"os"
 )
@@ -17,15 +16,13 @@ func InitRouter() {
 	var r *gin.Engine
 	h := core.Runtime.GetEngine()
 	if h == nil {
-		log.Fatal("not found engine...")
-		os.Exit(-1)
+		panic("not found engine...")
 	}
 	switch h.(type) {
 	case *gin.Engine:
 		r = h.(*gin.Engine)
 	default:
-		log.Fatal("not support other engine")
-		os.Exit(-1)
+		panic("not found engine...")
 	}
 
 	// 无需认证的路由
