--- a/static/template/service.go.template
+++ b/static/template/service.go.template
@@ -2,7 +2,7 @@ package service
 
 import (
 	"fmt"
-	"github.com/360EntSecGroup-Skylar/excelize"
+	"github.com/xuri/excelize/v2"
 	adminService "go-admin/app/admin/service"
 	"go-admin/app/{{.PackageName}}/{{.BusinessName}}/models"
 	"go-admin/app/{{.PackageName}}/{{.BusinessName}}/service/dto"
@@ -262,9 +262,10 @@ func (e *{{.ClassName}}) Remove(ids []int64, p *middleware.DataPermission) (int,
 func (e *{{.ClassName}}) GetExcel(list []models.{{.ClassName}}) ([]byte, error) {
 	sheetName := "{{.ClassName}}"
 	xlsx := excelize.NewFile()
-	no := xlsx.NewSheet(sheetName)
-	xlsx.SetColWidth(sheetName, "A", "L", 25)
-	xlsx.SetSheetRow(sheetName, "A1", &[]interface{}{
+	defer xlsx.Close()
+	no, _ := xlsx.NewSheet(sheetName)
+	_ = xlsx.SetColWidth(sheetName, "A", "L", 25)
+	_ = xlsx.SetSheetRow(sheetName, "A1", &[]interface{}{
 		"编号", "状态"})
 	dictService := adminService.NewSysDictDataService(&e.Service)
 	for i, item := range list {
@@ -272,7 +273,7 @@ func (e *{{.ClassName}}) GetExcel(list []models.{{.ClassName}}) ([]byte, error) 
 		status := dictService.GetLabel("sys_status", item.Status)
 
 		//按标签对应输入数据
-		xlsx.SetSheetRow(sheetName, axis, &[]interface{}{
+		_ = xlsx.SetSheetRow(sheetName, axis, &[]interface{}{
 		    item.Id,status,
 		})
 	}
