--- a/config/settings.yml
+++ b/config/settings.yml
@@ -38,7 +38,7 @@ settings:
     # token 过期时间 单位：秒，默认一周
     timeout: 604800
     # token 密钥，包括aes密钥共用，生产环境需修改，为确保兼容，长度需要为16、24、32字节
-    secret: admin-api
+    secret: admin-api-20231019-jason
   database:
     # 目前仅支持mysql
     driver: mysql
