--- a/static/template/router.go.template
+++ b/static/template/router.go.template
@@ -3,7 +3,6 @@ package router
 import (
 	"github.com/gin-gonic/gin"
 	"go-admin/core/runtime"
-	"os"
 )
 
 var (
@@ -14,7 +13,7 @@ var (
 // InitRouter 初始化路由
 func InitRouter() {
 	var r *gin.Engine
-	h := core.Runtime.GetEngine()
+	h := runtime.RuntimeConfig.GetEngine()
 	if h == nil {
 		panic("not found engine...")
 	}
