--- a/config/settings.yml
+++ b/config/settings.yml
@@ -41,9 +41,9 @@ settings:
     # token 密钥，包括aes密钥共用，生产环境需修改，为确保兼容，长度需要为16、24、32字节
     secret: admin-api-20231019-jason
   database:
-    # 目前支持：mysql、postgres
+    # 目前支持：mysql
     driver: mysql
-    # 数据库连接字符串 mysql 缺省信息 charset=utf8&parseTime=True&loc=Local&timeout=1000ms
+    # 数据库连接字符串
     source: 账号:密码@tcp(ip:端口号)/数据库名?charset=utf8&parseTime=True&loc=Local&timeout=1000ms
   #  databases:
   #    'locaohost:8888':
