--- a/config/settings.yml
+++ b/config/settings.yml
@@ -60,7 +60,7 @@ settings:
   cache:
     # 缓存默认时间 单位：秒
     expired: 300
-    # 若注释掉redis的内容，默认将使用内存缓存，下放配置一般使用前两个，剩余配置按需设置
+    # 若注释掉redis的内容，默认将使用内存缓存，下方配置一般使用前两个，剩余配置按需设置
 #    redis:
 #      addr: 127.0.0.1:6379
 #      password: 密码
