--- a/static/template/service.go.template
+++ b/static/template/service.go.template
@@ -10,16 +10,16 @@ import (
 	"go-admin/core/dto/service"
 	cDto "go-admin/core/dto"
 	{{- range .SysGenColumns }}
-		{{- if and (eq .ColumnName "status") ( ne .IsRequired "1" ) }}
+    {{- if and (eq .ColumnName "status") ( ne .IsRequired "1" ) }}
 	"go-admin/core/global"
-		{{- end }}
+    {{- end }}
 	{{- end }}
 	{{- $hasDecimal := false }}
 	{{- range .SysGenColumns }}
-		{{- if eq .GoType "decimal.Decimal"}}{{- $hasDecimal = true }}{{- end }}
+    {{- if eq .GoType "decimal.Decimal"}}{{- $hasDecimal = true }}{{- end }}
 	{{- end }}
 	{{- if eq $hasDecimal true }}
-		"github.com/shopspring/decimal"
+    "github.com/shopspring/decimal"
 	{{- end }}
 	"go-admin/core/lang"
 	"gorm.io/gorm"
@@ -162,25 +162,22 @@ func (e *{{.ClassName}}) Insert(c *dto.{{.ClassName}}InsertReq) (int64, int, err
 	now := time.Now()
 	var data models.{{.ClassName}}
 	{{- range .SysGenColumns }}
-	{{- if and (eq .ColumnName "id")  (eq .IsPk "1") }}
-	{{- else if eq .GoField "CreatedAt" }}
-	data.CreatedAt = &now
-	{{- else if eq .GoField "UpdatedAt" }}
-	data.UpdatedAt = &now
-	{{- else if eq .GoField "CreateBy" }}
-	data.CreateBy = c.CurrUserId
-	{{- else if eq .GoField "UpdateBy" }}
-	data.UpdateBy = c.CurrUserId
-	{{- else }}
-		{{- if eq .IsRequired "1" }}
-	data.{{.GoField}} = c.{{.GoField}}
-			{{- else }}
-				{{- if eq .GoField "Status" }}
-	data.Status = global.SysStatusOk
-				{{- end }}
-			{{- end }}
-		{{- end }}
-		{{- end }}
+	{{- if ne .ColumnName "id" }}
+	{{- if eq .GoField "CreatedAt" }}
+    data.CreatedAt = &now
+    {{- else if eq .GoField "UpdatedAt" }}
+    data.UpdatedAt = &now
+    {{- else if eq .GoField "CreateBy" }}
+    data.CreateBy = c.CurrUserId
+    {{- else if eq .GoField "UpdateBy" }}
+    data.UpdateBy = c.CurrUserId
+    {{- else if eq .GoField "Status" }}
+    data.Status = global.SysStatusOk
+    {{- else if eq .IsRequired "1" }}
+    data.{{.GoField}} = c.{{.GoField}}
+	{{- end }}
+    {{- end }}
+    {{- end }}
 	err := e.Orm.Create(&data).Error
 	if err != nil {
 		return 0, lang.DataInsertLogCode, lang.MsgLogErrf(e.Log, e.Lang, lang.DataInsertCode, lang.DataInsertLogCode, err)
@@ -209,23 +206,23 @@ func (e *{{.ClassName}}) Update(c *dto.{{.ClassName}}UpdateReq, p *middleware.Da
 	//最小化变更改动过的数据
 	updates := map[string]interface{}{}
 	{{- range .SysGenColumns }}
-		{{- if and (eq .IsRequired "1") }}
-			{{- if eq .GoType "string" }}
+    {{- if eq .IsRequired "1" }}
+    {{- if eq .GoType "string" }}
 	if c.{{.GoField}} != "" && data.{{.GoField}} != c.{{.GoField}} {
 		updates["{{.ColumnName}}"] = c.{{.GoField}}
 	}
-			{{- end }}
-			{{- if or (eq .GoType "uint64") (eq .GoType "uint32") (eq .GoType "uint16") (eq .GoType "uint8") (eq .GoType "uint") (eq .GoType "int64") (eq .GoType "int32") (eq .GoType "int8") (eq .GoType "int") (eq .GoType "int32") (eq .GoType "float64") (eq .GoType "float") }}
+    {{- end }}
+    {{- if or (eq .GoType "uint64") (eq .GoType "uint32") (eq .GoType "uint16") (eq .GoType "uint8") (eq .GoType "uint") (eq .GoType "int64") (eq .GoType "int32") (eq .GoType "int8") (eq .GoType "int") (eq .GoType "int32") (eq .GoType "float64") (eq .GoType "float") }}
 	if c.{{.GoField}} >= 0 && data.{{.GoField}} != c.{{.GoField}}{
 		updates["{{.ColumnName}}"] = c.{{.GoField}}
 	}
-			{{- end }}
-			{{- if or (eq .GoType "decimal.Decimal") }}
+    {{- end }}
+    {{- if or (eq .GoType "decimal.Decimal") }}
 	if c.{{.GoField}}.Cmp(decimal.Zero) >= 0 && data.{{.GoField}}.Cmp(c.{{.GoField}}) != 0 {
 		updates["{{.ColumnName}}"] = c.{{.GoField}}
 	}
-			{{- end }}
-		{{- end }}
+    {{- end }}
+    {{- end }}
 	{{- end }}
 	if len(updates)>0 {
         updates["updated_at"] = time.Now()
