--- a/web/package.json
+++ b/web/package.json
@@ -98,7 +98,8 @@
     "serve-static": "^1.14.1",
     "svg-sprite-loader": "^5.0.0",
     "svgo": "1.3.2",
-    "vue-template-compiler": "2.7.14"
+    "vue-template-compiler": "2.7.14",
+    "md5": "^2.3.0"
   },
   "engines": {
     "node": ">=8.9",
